--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
 
     <h2>Свяжитесь с нами</h2>
     <p>Есть вопросы о Brawl Stars? Напишите нам!</p>
-    <img src="contact.jpg" alt="Контакты Brawl Stars" style="width: 350px;">
+    <img src="contact.png" alt="Контакты Brawl Stars" style="width: 350px;">
     
     <h4>Наш офис</h4>
     <p>Город Бравл, улица Старс, дом 100</p>
