--- a/contacts.html
+++ b/contacts.html
@@ -33,7 +33,7 @@
     <h4>Онлайн поддержка</h4>
     <ul>
         <li><a href="https://supercell.com">Официальный сайт</a></li>
-        <li><a href="support@brawlstars.com">Написать в поддержку</a></li>
+        <li><a href="mailto:support@brawlstars.com">Написать в поддержку</a></li>
     </ul>
     
     <h4>Отправьте сообщение</h4>
