--- a/src/contacts.html
+++ b/src/contacts.html
@@ -11,7 +11,7 @@
     <header>
         <img src="logo.png" alt="Логотип" style="width: 100px;">
         <nav>
-            <ul> class="breadcrumbs">
+            <ul class="breadcrumbs">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
             </ul>
