--- a/src/index.html
+++ b/src/index.html
@@ -62,8 +62,7 @@
 
     <!-- Если остались вопросы -->
     <section class="contact-us">
-        <h2>Если у вас остались вопросы</h2>
-        <p>Не стесняйтесь задать их через форму ниже.</p>
+        <h2>Если у вас остались вопросы - задайте их нам</h2>
         <form action="#" method="post" class="contact-form">
             <label for="name">Ваше имя:</label>
             <input class="input-field" type="text" id="name" name="name" autocomplete="name"><br><br>
