--- a/src/index.html
+++ b/src/index.html
@@ -62,14 +62,14 @@
             <div class="header__content">
                 <div class="header__menu">
                     <svg>
-                        <use href="#menu" alt="burger-icon"></use>
+                        <use href="#menu" alt="menu-icon"></use>
                     </svg>
                     <div class="header__menu-content">
                         <div class="header__menu-wrapper">
                             <div class="header__menu-close-wrapper">
                                 <div class="header__menu-close">
                                     <svg>
-                                        <use href="#cross" alt="close-icon"></use>
+                                        <use href="#cross" alt="cross-icon"></use>
                                     </svg>
                                 </div>
                             </div>
@@ -172,25 +172,25 @@
             </div>
         </section>
 
-        <section class="block__devcycle">
-            <div class="block__devcycle-leftblock">
-                <div class="block__devcycle-content">
-                    <div class="block__devcycle-title">Full development cycle</div>
-                    <div class="block__devcycle-text">We use proven technologies</div>
+        <section class="block__dev">
+            <div class="block__dev-leftblock">
+                <div class="block__dev-content">
+                    <div class="block__dev-title">Full development cycle</div>
+                    <div class="block__dev-text">We use proven technologies</div>
                 </div>
-                <div class="block__devcycle-content">
-                    <article class="block__devcycle-tech">
-                        <div class="block__devcycle-subtitle">Web</div>
-                        <div class="block__devcycle-enum">
+                <div class="block__dev-content">
+                    <article class="block__dev-tech">
+                        <div class="block__dev-subtitle">Web</div>
+                        <div class="block__dev-enum">
                             PHP <span>/</span> Javascript <span>/</span> Node.JS <span>/</span> 
                             Web Socket <span>/</span> Socket.io <span>/</span> Vue.js <span>/</span> 
                             Nuxt <span>/</span> MySQL <span>/</span> Laravel <span>/</span> 
                             GO lang <span>/</span> django <span>/</span> Python
                         </div>
                     </article>
-                    <article class="block__devcycle-tech">
-                        <div class="block__devcycle-subtitle">Mobile</div>
-                        <div class="block__devcycle-enum">
+                    <article class="block__dev-tech">
+                        <div class="block__devc-subtitle">Mobile</div>
+                        <div class="block__dev-enum">
                             Swift <span>/</span> Kotlin <span>/</span> Alamofire <span>/</span> 
                             Firebase <span>/</span> CoreData <span>/</span> Room <span>/</span> 
                             Realm <span>/</span> Coroutine <span>/</span> RxJava <span>/</span> 
@@ -199,48 +199,48 @@
                     </article>
                 </div>
             </div>
-            <div class="block__devcycle-rightblock">
-                <div class="block__devcycle-list">
-                    <article class="block__devcycle-item">
+            <div class="block__dev-rightblock">
+                <div class="block__dev-list">
+                    <article class="block__dev-item">
                         <a href="#">iOS  development</a>
                         <svg width="24" height="24">
-                            <use href="#next" style="color: #2d66ee;" alt="arrow-icon"></use>
+                            <use href="#next" style="color: #2d66ee;" alt="next-icon"></use>
                         </svg>
                     </article>
-                    <article class="block__devcycle-item">
+                    <article class="block__dev-item">
                         <a href="#">Android development</a>
                         <svg width="24" height="24">
-                            <use href="#next" style="color: #2d66ee;" alt="arrow-icon"></use>
+                            <use href="#next" style="color: #2d66ee;" alt="next-icon"></use>
                         </svg>
                     </article>
-                    <article class="block__devcycle-item">
+                    <article class="block__dev-item">
                         <a href="#">Web development</a>
                         <svg width="24" height="24">
-                            <use href="#next" style="color: #2d66ee;" alt="arrow-icon"></use>
+                            <use href="#next" style="color: #2d66ee;" alt="next-icon"></use>
                         </svg>
                     </article>
-                    <article class="block__devcycle-item">
+                    <article class="block__dev-item">
                         <a href="#">UI/UX design</a>
                         <svg width="24" height="24">
-                            <use href="#next" style="color: #2d66ee;" alt="arrow-icon"></use>
+                            <use href="#next" style="color: #2d66ee;" alt="next-icon"></use>
                         </svg>
                     </article>
-                    <article class="block__devcycle-item">
+                    <article class="block__dev-item">
                         <a href="#">Testing</a>
                         <svg width="24" height="24">
-                            <use href="#next" style="color: #2d66ee;" alt="arrow-icon"></use>
+                            <use href="#next" style="color: #2d66ee;" alt="next-icon"></use>
                         </svg>
                     </article>
-                    <article class="block__devcycle-item">
+                    <article class="block__dev-item">
                         <a href="#">Launch</a>
                         <svg width="24" height="24">
-                            <use href="#next" style="color: #2d66ee;" alt="arrow-icon"></use>
+                            <use href="#next" style="color: #2d66ee;" alt="next-icon"></use>
                         </svg>
                     </article>
-                    <article class="block__devcycle-item">
+                    <article class="block__dev-item">
                         <a href="#">IT consulting</a>
                         <svg width="24" height="24">
-                            <use href="#next" style="color: #2d66ee;" alt="arrow-icon"></use>
+                            <use href="#next" style="color: #2d66ee;" alt="next-icon"></use>
                         </svg>
                     </article>
                 </div>
