--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>IT-website</title>
-    <link rel="stylesheet" href="assets/styles/style.scss">
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
     <svg display="none" xmlns="http://www.w3.org/2000/svg">
