--- a/src/index.html
+++ b/src/index.html
@@ -167,8 +167,17 @@
                     <button type="submit">Get consultation</button>
                 </form>
             </article>
-            <div class="block__welcome-image">
-                <img src="assets/img/photo.png" alt="screens">
+            <div class="block__welcome-background">
+                <div class="block__welcome-background-wrapper">
+                    <div class="background__image image-left">
+                        <img src="assets/img/column-left.webp" alt="Left Column">
+                        <img src="assets/img/column-left.webp" alt="Left Column Duplicate">
+                    </div>
+                    <div class="background__image image-right">
+                        <img src="assets/img/column-right.webp" alt="Right Column">
+                        <img src="assets/img/column-right.webp" alt="Right Column Duplicate">
+                    </div>
+                </div>
             </div>
         </section>
 
